<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:transitionGroup="true"
    app:layout_constraintDimensionRatio="1:1"
    app:layout_constraintWidth_percent="0.3"
    tools:context=".ui.fragments.ProductDetailsFragment">

    <ImageView
        android:id="@+id/productImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/product_image"
        android:scaleType="fitCenter"
        app:layout_constrainedHeight="true"
        app:layout_constrainedWidth="true"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/backButton"
        app:layout_constraintWidth_percent="0.65"
        tools:src="@tools:sample/avatars" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_ripple"
        android:contentDescription="@string/back_button"
        android:scaleType="fitCenter"
        android:scaleX="-1"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
        app:layout_constraintTop_toTopOf="@+id/topGuideline"
        app:layout_constraintWidth_percent="0.08"
        app:srcCompat="@drawable/ic_bold_right_arrow"
        app:tint="?attr/colorPrimary" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/innerleftGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.06" />

    <TextView
        android:id="@+id/productNameText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/chunk_five"
        android:textColor="@color/white"
        app:layout_constrainedHeight="true"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/productImage"
        tools:text="Nome prodotto" />

    <TextView
        android:id="@+id/ingredientsText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/chunk_five"
        android:text="@string/ingredients_text"
        android:textColor="?colorPrimary"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
        app:layout_constraintHeight_percent="0.040"
        app:layout_constraintStart_toStartOf="@+id/innerleftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/productNameText" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/ingredientsGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.14" />

    <TextView
        android:id="@+id/productIngredientText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elegantTextHeight="true"
        android:fontFamily="@font/chunk_five"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
        app:layout_constraintStart_toStartOf="@+id/innerleftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/ingredientsText"
        tools:text="Lista ingredienti." />

    <androidx.constraintlayout.widget.Barrier
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="productImage"
        tools:layout_editor_absoluteY="62dp" />

</androidx.constraintlayout.widget.ConstraintLayout>